--- a/Main_file.tex
+++ b/Main_file.tex
@@ -84,7 +84,7 @@
 
     ------------------------------------------------------------------------------------------------\\[1.0cm]
     \LARGE{\textbf{Development of a 6 DOF Stewart platform Force Balance for a Low Speed Wind Tunnel}}\\[0.6cm]
-    \LARGE{\textbf{Final year project (FYP 13-11)
+    \LARGE{\textbf{Final year project (FYP 18-14)
             }}\\[1.5cm]
     %\large{by}\\[0.6cm
 
@@ -106,6 +106,9 @@
 
 \input{Files/Declaration}
 \clearpage
+\addcontentsline{toc}{section}{Abstract}
+\input{Files/Abstract}
+\clearpage
 \addcontentsline{toc}{section}{Table of Contents}
 \tableofcontents
 \clearpage
@@ -120,11 +123,6 @@
 \newpage
 \clearpage
 \addcontentsline{toc}{section}{List of Abbreviations}
-\clearpage
-\newpage
-
-\newpage
-\input{Files/Abstract}
 \clearpage
 \pagenumbering{arabic}
   \input{Files/Introduction}
