--- a/Main_file.tex
+++ b/Main_file.tex
@@ -32,8 +32,7 @@
 \renewcommand{\sectionmark}[1]{\markboth{Chapter~\thesection.~#1}{#1}}
 \renewcommand{\subsectionmark}[1]{\markright{\thesubsection\ #1}}
 \rhead[\fancyplain{}{\leftmark}]%
-{\fancyplain{\thepage}{\thepage}} \cfoot{} \plainheadrulewidth
-0.4pt
+{\fancyplain{\thepage}{\thepage}} \cfoot{} \plainheadrulewidth 0.4pt
 %% Otherwise: Overfull \vbox-Warning against fancyheadings-pacakage
 %%  idea of: nic@minster.york.ac.uk (Nick Cropper)
 \makeatletter
@@ -84,7 +83,7 @@
 
     ------------------------------------------------------------------------------------------------\\[1.0cm]
     \LARGE{\textbf{Development of a 6 DOF Stewart platform Force Balance for a Low Speed Wind Tunnel}}\\[0.6cm]
-    \LARGE{\textbf{Final year project (FYP 18-14)
+    \LARGE{\textbf{Final year project proposal (FYP 18-14)
             }}\\[1.5cm]
     %\large{by}\\[0.6cm
 
@@ -125,7 +124,7 @@
 \addcontentsline{toc}{section}{List of Abbreviations}
 \clearpage
 \pagenumbering{arabic}
-  \input{Files/Introduction}
+  \input{Files/Chapter1}
   \clearpage
   \input{Files/Chapter2}
   \clearpage
