--- a/Main_file.tex
+++ b/Main_file.tex
@@ -83,7 +83,7 @@
 
     ------------------------------------------------------------------------------------------------\\[1.0cm]
     \LARGE{\textbf{Development of a 6 DOF Stewart platform Force Balance for a Low Speed Wind Tunnel}}\\[0.6cm]
-    \LARGE{\textbf{Final year project proposal (FYP 18-14)
+    \LARGE{\textbf{Final Year Project Proposal (FYP 18-14)
             }}\\[1.5cm]
     %\large{by}\\[0.6cm
 
