--- a/Files/Chapter1.tex
+++ b/Files/Chapter1.tex
@@ -56,7 +56,7 @@ sheet metal, our project will be limited to development of the six-degrees-of-fr
 \subsection{Problem statement}
 (Insert your content)
 \subsection{Objectives}
-(Insert your content)
+\cite{stewart_platform_1965}
 \subsection{Justification of the study}
 \paragraph{}Additive manufacturing offers the ability to produce intricate products and parts with lower development costs, shorter lead times, less energy consumed during manufacturing as well as less material waste. This method can be used to manufacture delicate components such as the bipolar plates with elimination of the risks involved such as breakage of brittle Graphene material during production.     
 \paragraph{}Precise control of reactant flow and pressure, stack temperature, and membrane humidity will increase the fuel cell’s robustness as well as efficiency.
