--- a/Files/Chapter1.tex
+++ b/Files/Chapter1.tex
@@ -39,13 +39,13 @@ lift and drag forces could be read. The wind tunnel was powered by a fan driven 
 Later in the early 20th century in Europe, the main users of wind tunnels were Gustave Eiffel in France and Ludwig Prandtl in Germany. Prandtl built the first closed circuit wind tunnel in 1908. By the 1940’s supersonic wind tunnels were in use. In 1972 a cryogenic wind tunnel was built at NASA Langley by injecting liquid nitrogen into the wind tunnel to cool the gas. This lowered the viscosity and increased the Reynolds number, and this tunnel had the capability to match Reynolds and Mach numbers simultaneously up to Mach 1.2. 
 \paragraph{}Today the largest wind tunnel in the world is the National Full-Scale Aerodynamics Complex at NASA's Ames Research Center, which has a test section of cross section 80 ft by 100 ft (24 m x 31 m). The types of instruments in common use in wind tunnels include boundary layer rakes, tufts, pitot tubes, pressure sensitive paint, smoke, and static pressure taps.
 \begin{figure}[!h]
-\hfill\includegraphics{Figures/Fig3}\hspace*{\hfill}
+\includegraphics{Figures/Fig3}
 \caption{NASA wind tunnels used to test new airplane designs}
 \end{figure}
 
 \paragraph{}NASA uses wind tunnels to test scale models of aircraft and spacecraft. Wind tunnels help NASA to test ideas of making airplanes better and safer. They are also used to help engineers in designing spacecraft that will work in other planets such as mars - the wind tunnel can be used to simulate objects in an atmosphere that's thinner than ours i.e. an atmosphere that's exactly like the Martian atmosphere. NASA has wind tunnels of different types and sizes. Some are low-speed wind tunnels, others are hypersonic i.e. they are made to carry out tests at 4,000 mph (6437 kph).
 \begin{figure}[!h]
-\hfill\includegraphics{Figures/Fig4}\hspace*{\hfill}
+\includegraphics{Figures/Fig4}
 \caption{NASA wind tunnels used to test the design of heavy-lift rocket}
 \end{figure}
 \paragraph{}Wind tunnels are used to measure the aerodynamic forces on airplanes, wings, cars, trucks, bridges, and buildings, they can also be used to measure the
