--- a/Bib/References.bib
+++ b/Bib/References.bib
@@ -1,3 +1,113 @@
-% This file was created with JabRef 2.9.2.
-% Encoding: Cp1252
+% Encoding: UTF-8
 
+@book{franklin_feedback_2002,
+	title = {Feedback control of dynamic systems},
+	volume = {4},
+	publisher = {Prentice hall Upper Saddle River, NJ},
+	author = {Franklin, Gene F. and Powell, J. David and Emami-Naeini, Abbas and Powell, J. David},
+	year = {2002},
+	file = {Full Text:C\:\\Users\\samlo\\Zotero\\storage\\8B9XTLRS\\Franklin et al. - 2002 - Feedback control of dynamic systems.pdf:application/pdf},
+}
+
+
+@article{thanapalan_model_2011,
+	title = {Model based controller design for hydrogen fuel cell systems},
+	issn = {2172038X, 2172038X},
+	url = {http://www.icrepq.com/icrepq'11/419-thanapalan.pdf},
+	doi = {10.24084/repqj09.419},
+	abstract = {In this paper, fuel cell system modelling alongside controller development for performance improvements, are investigated. Essentially and in general terms there are two approaches to modelling; black box modelling and detailed dynamic modelling. This work addresses both modelling approaches. These models are then used for hydrogen fuel cell (FC) controller development for improved system performance. A fuzzy-PID hybrid controller has been designed and tested and the results indicate that the fuzzy-PID hybrid control strategy can improve the system’s performance significantly.},
+	language = {en},
+	urldate = {2021-11-30},
+	journal = {Renewable Energy and Power Quality Journal},
+	author = {Thanapalan, K.K.T. and Premier, G.C. and Guwy, A.J.},
+	month = may,
+	year = {2011},
+	pages = {671--676},
+	file = {Thanapalan et al. - 2011 - Model based controller design for hydrogen fuel ce.pdf:C\:\\Users\\samlo\\Zotero\\storage\\295B5UT6\\Thanapalan et al. - 2011 - Model based controller design for hydrogen fuel ce.pdf:application/pdf},
+}
+
+@article{stefanopoulou_mechatronics_nodate,
+	title = {Mechatronics in {Fuel} {Cell} {Systems}},
+	language = {en},
+	author = {Stefanopoulou, Anna G},
+	pages = {12},
+	file = {Stefanopoulou - Mechatronics in Fuel Cell Systems.pdf:C\:\\Users\\earls\\Zotero\\storage\\DUFSRHW8\\Stefanopoulou - Mechatronics in Fuel Cell Systems.pdf:application/pdf},
+}
+@book{pukrushpan_modeling_2003,
+	title = {Modeling and control of fuel cell systems and fuel processors},
+	publisher = {University of Michigan},
+	author = {Pukrushpan, Jay Tawee},
+	year = {2003},
+	file = {Full Text:C\:\\Users\\earls\\Zotero\\storage\\32HN7A3Q\\Pukrushpan - 2003 - Modeling and control of fuel cell systems and fuel.pdf:application/pdf},
+}
+@article{xu_hierarchical_2010,
+	title = {Hierarchical control of vehicular fuel cell/battery hybrid powertrain},
+	volume = {4},
+	number = {1},
+	journal = {World Electric Vehicle Journal},
+	author = {Xu, Liangfei and Ouyang, Minggao and Li, Jianqiu and Hua, Jianfeng},
+	year = {2010},
+	note = {Publisher: Multidisciplinary Digital Publishing Institute},
+	pages = {133--142},
+	file = {Full Text:C\:\\Users\\earls\\Zotero\\storage\\ANCQHVPT\\Xu et al. - 2010 - Hierarchical control of vehicular fuel cellbatter.pdf:application/pdf;Snapshot:C\:\\Users\\earls\\Zotero\\storage\\6HPFIWVP\\133.html:text/html},
+}
+@article{ashby_fuel_nodate,
+	title = {Fuel {Cell} {Mechatronics} {Senior} {Design} {Project}},
+	author = {Ashby, Ashley},
+	file = {Full Text:C\:\\Users\\earls\\Zotero\\storage\\T43BST6Q\\Ashby - Fuel Cell Mechatronics Senior Design Project.pdf:application/pdf},
+}
+@misc{holze_supramanian_2007,
+	title = {Supramanian {Srinivasan}: {Fuel} {Cells}—{From} {Fundamentals} to {Applications}},
+	shorttitle = {Supramanian {Srinivasan}},
+	publisher = {Springer},
+	author = {Holze, Rudolf},
+	year = {2007},
+	file = {Full Text:C\:\\Users\\earls\\Zotero\\storage\\FN75UL77\\s10008-007-0374-5.html:text/html},
+}
+@article{gonzatti_proposal_2017,
+	title = {Proposal for automation and control of a {PEM} fuel cell stack},
+	volume = {28},
+	number = {4},
+	journal = {Journal of Control, Automation and Electrical Systems},
+	author = {Gonzatti, F. and Miotto, M. and Farret, F. A.},
+	year = {2017},
+	note = {Publisher: Springer},
+	pages = {493--501},
+	file = {Snapshot:C\:\\Users\\earls\\Zotero\\storage\\D49QXG2J\\s40313-017-0322-2.html:text/html},
+}
+
+@article{thanapalan_model_nodate,
+	title = {Model {Based} {Controller} {Design} for {Hydrogen} {Fuel} {Cell} {Systems}},
+	author = {Thanapalan, K. K. T. and Premier, G. C. and Guwy, A. J.},
+	file = {Full Text:C\:\\Users\\earls\\Zotero\\storage\\UPYTRWMK\\Thanapalan et al. - Model Based Controller Design for Hydrogen Fuel Ce.pdf:application/pdf},
+}
+
+
+@book{ehsani_modern_2018,
+	title = {Modern electric, hybrid electric, and fuel cell vehicles},
+	publisher = {CRC press},
+	author = {Ehsani, Mehrdad and Gao, Yimin and Longo, Stefano and Ebrahimi, Kambiz M.},
+	year = {2018},
+	file = {Snapshot:C\:\\Users\\earls\\Zotero\\storage\\LFJ33YD6\\modern-electric-hybrid-electric-fuel-cell-vehicles-mehrdad-ehsani-yimin-gao-stefano-longo-kambi.html:text/html},
+}
+
+
+@article{stewart_platform_1965,
+	title = {A Platform with Six Degrees of Freedom},
+	volume = {180},
+	issn = {0020-3483, 2058-1203},
+	url = {http://journals.sagepub.com/doi/10.1243/PIME_PROC_1965_180_029_02},
+	doi = {10.1243/PIME_PROC_1965_180_029_02},
+	abstract = {This paper describes a mechanism which has six degrees of freedom, controlled in any combination by six motors, each having a ground abutment. It is considered that by its particular arrangement, this mechanism may form an elegant design for simulating flight conditions in the training of pilots. Unlike most simulators, it has no fixed axes relative to the ground, and therefore within the limits of amplitude of the design it can truly simulate the conditions of banking by carrying the simulation of control surfaces into the axes of the new attitude.
+            Variations in control arrangements are described and their respective design merits considered.
+            Other possible uses for this mechanism are mentioned, including automation of production.},
+	pages = {371--386},
+	number = {1},
+	journaltitle = {Proceedings of the Institution of Mechanical Engineers},
+	shortjournal = {Proceedings of the Institution of Mechanical Engineers},
+	author = {Stewart, D.},
+	urldate = {2022-05-25},
+	date = {1965-06},
+	langid = {english},
+	file = {Stewart - 1965 - A Platform with Six Degrees of Freedom.pdf:C\:\\Users\\earls\\Zotero\\storage\\Q39VSCLJ\\Stewart - 1965 - A Platform with Six Degrees of Freedom.pdf:application/pdf},
+}
