--- a/Main_file.tex
+++ b/Main_file.tex
@@ -51,7 +51,8 @@
 \renewcommand\thefigure{\thesection.\arabic{figure}}
 \renewcommand\thetable{\thesection.\arabic{table}}
 \@addtoreset{equation}{section} \@addtoreset{figure}{section}
-\@addtoreset{table}{section} \makeatother
+\@addtoreset{table}{section} 
+\makeatother
 
 %-----Useful abbreviations----------------------
 \newcommand{\mr}{\mathrm}
@@ -106,6 +107,8 @@
 
 \input{Files/Declaration}
 \clearpage
+\input{Files/Abstract}
+\clearpage
 \tableofcontents
 \clearpage
 \addcontentsline{toc}{section}{Table of Contents}
@@ -122,12 +125,8 @@
 \addcontentsline{toc}{section}{List of Abbreviations}
 \clearpage
 \newpage
-
-\newpage
-\input{Files/Abstract}
-\clearpage
 \pagenumbering{arabic}
-  \input{Files/Introduction}
+  \input{Files/Chapter1}
   \clearpage
   \input{Files/Chapter2}
   \clearpage
