--- a/Main_file.tex
+++ b/Main_file.tex
@@ -84,8 +84,10 @@
    \large{Department of Mechatronic Engineering}\\
 
     ------------------------------------------------------------------------------------------------\\[1.0cm]
-    \LARGE{\textbf{Development of a Hydrogen Fuel Cell Control System}}\\[0.6cm]
-    \LARGE{\textbf{Final year project (FYP 13-11)
+    \LARGE{\textbf{Development of a 6 DOF Stewart platform
+    Force Balance for a Low Speed Wind Tunnel
+    }}\\[0.6cm]
+    \LARGE{\textbf{Final year project proposal (FYP 18-10)
             }}\\[1.5cm]
     %\large{by}\\[0.6cm
 
