--- a/Files/Chapter1.tex
+++ b/Files/Chapter1.tex
@@ -4,11 +4,16 @@
 \subparagraph*{Description of Mechanism}
 \paragraph{}A stewart platform is a platform with six degrees of freedom (DOF). The six-degrees-of-motion platform is capable of moving in three linear directions and
 three angular directions singly or in any combination.
-It comprises a triangular/rectangular/circular plane called the platform, of which each of the corners (for triangualar platform in this case) is connected through a three-axis joint to one of three legs. This is shown in Fig.1.1.
-\begin{figure}[!h]
-\includegraphics{Figures/Fig1}
-\caption{General arrangement}
-\end{figure}
+It comprises a triangular/rectangular/circular plane called the platform, of which each of the corners (for triangualar platform in this case) is connected through a three-axis joint to one of three legs.
+
+ This is shown in Fig.1.1.
+\begin{center}
+	\begin{figure}[!h]
+	\centering
+	\includegraphics{Figures/Fig1}
+	\caption{General arrangement}
+	\end{figure}
+\end{center}
 \paragraph{}Each leg is connected to the ground by a two-axis joint where: One of these axes is
 normal to the leg and is provided with a means for control wheareas, the other axis is normal to the first and is not provided with a means for control.
 Each leg also has controllable means for extending its length. These control means include:
@@ -28,13 +33,19 @@ Each leg also has controllable means for extending its length. These control mea
 \subsubsection{Force Balance}
 \subsubsection{Wind Tunnel}
 \paragraph{}
-A wind tunnel is a large tube with air moving inside. This movement of air is usually done by powerful fans. The tunnel is used to copy the actions of an object in flight. The first wind tunnel was built by
+A wind tunnel is a large tube with air moving inside. This movement of air is usually done by powerful fans. The tunnel is used to copy the actions of an object in flight thus allowing
+to obtain the components that better define this interaction, forces and moments.
+
+\paragraph{} The first wind tunnel was built by
 Francis Wenham in 1871. However, it was the Wright Brothers who were the first to show the value of the wind tunnel in aerodynamic design with their 1902 wind tunnel.  The Wright Brothers’ wind tunnel was largely made of wood, with a glass window on the top to look down through and see the force balance, from which the
 lift and drag forces could be read. The wind tunnel was powered by a fan driven off a natural gas fueled engine. Their tunnel was square of 16" by 16"(about 407mm by 407mm), and 6 foot long (about 1829mm), with a maximum test speed of 35 mph (about 56 km/h).
-\begin{figure}[!h]
-\includegraphics{Figures/Fig2}
-\caption{Diagram of a typical wind tunnel}
-\end{figure}
+\begin{center}
+	\begin{figure}[!h]
+	\centering
+	\includegraphics{Figures/Fig2}
+	\caption{Diagram of a typical wind tunnel}
+	\end{figure}
+\end{center}
 \paragraph{}
 Later in the early 20th century in Europe, the main users of wind tunnels were Gustave Eiffel in France and Ludwig Prandtl in Germany. Prandtl built the first closed circuit wind tunnel in 1908. By the 1940’s supersonic wind tunnels were in use. In 1972 a cryogenic wind tunnel was built at NASA Langley by injecting liquid nitrogen into the wind tunnel to cool the gas. This lowered the viscosity and increased the Reynolds number, and this tunnel had the capability to match Reynolds and Mach numbers simultaneously up to Mach 1.2. 
 \paragraph{}Today the largest wind tunnel in the world is the National Full-Scale Aerodynamics Complex at NASA's Ames Research Center, which has a test section of cross section 80 ft by 100 ft (24 m x 31 m). The types of instruments in common use in wind tunnels include boundary layer rakes, tufts, pitot tubes, pressure sensitive paint, smoke, and static pressure taps.
