--- a/Bib/References.bib
+++ b/Bib/References.bib
@@ -111,3 +111,29 @@
 	langid = {english},
 	file = {Stewart - 1965 - A Platform with Six Degrees of Freedom.pdf:C\:\\Users\\earls\\Zotero\\storage\\Q39VSCLJ\\Stewart - 1965 - A Platform with Six Degrees of Freedom.pdf:application/pdf},
 }
+
+@article{fernandes_design_nodate,
+	title = {Design of a Wind Tunnel Force Balance},
+	pages = {122},
+	author = {Fernandes, João Tiago Pinheiro},
+	langid = {english},
+	file = {Fernandes - Design of a Wind Tunnel Force Balance.pdf:C\:\\Users\\earls\\Zotero\\storage\\QBMQQSXN\\Fernandes - Design of a Wind Tunnel Force Balance.pdf:application/pdf},
+}
+
+
+@inproceedings{morris_force_2010,
+	location = {Louisville, Kentucky},
+	title = {Force Balance Design For Educational Wind Tunnels},
+	url = {http://peer.asee.org/15891},
+	doi = {10.18260/1-2--15891},
+	abstract = {A typical educational wind tunnel need only measure the lift and drag forces and be able to control the angle of attack of the mounted model. This paper presents a simple design for the balance apparatus to measure lift and drag. Two load cells are used in the apparatus, one to measure the vertical force (lift) and one to measure the horizontal force (drag). This can be used for aerodynamics studies of airplane and airfoil models, as well as ground vehicles such as trucks and cars. If desired, a third load cell can be added to enable measurements of the pitching moment. A linear actuator is used to change the angle of attack of plane and airfoil models. The actuator is mounted inside the force balance apparatus, using a parallel four-bar linkage so that the angle of attack is linearly related to the actuator position. The linear actuator can be controlled by a computer, and the lift, drag, and angle of attack data recorded on the same computer. This design is simple and easy to fabricate, can be added to an old wind tunnel in need of an upgrade or replacement or included as part of a new wind tunnel built from scratch. Complete details of the design including engineering drawings are included in the paper. The design is also low cost compared to commercial wind tunnel balances and gives sufficient accuracy for educational and some research purposes. A counterweight is used to mechanically zero the force readout. The new load balance has been tested and found accurate. It has sufficient precision to perform a sting drag measurement as well. A quick-connect mechanism is used for mounting and removing models.},
+	eventtitle = {2010 Annual Conference \& Exposition},
+	pages = {15.594.1--15.594.10},
+	booktitle = {2010 Annual Conference \& Exposition Proceedings},
+	publisher = {{ASEE} Conferences},
+	author = {Morris, Martin and Post, Scott},
+	urldate = {2022-05-25},
+	date = {2010-06},
+	langid = {english},
+	file = {Morris and Post - 2010 - Force Balance Design For Educational Wind Tunnels.pdf:C\:\\Users\\earls\\Zotero\\storage\\WZR5XJVY\\Morris and Post - 2010 - Force Balance Design For Educational Wind Tunnels.pdf:application/pdf},
+}
