--- a/Files/Declaration.tex
+++ b/Files/Declaration.tex
@@ -12,8 +12,8 @@ We hereby declare that the work contained in this report is original; researched
 \vspace*{.5cm}
 Approved by supervisors:
 \begin{enumerate}
-	%\item Dr.-Ing. Jackson G. Njiri\vspace*{.2cm}\\
-	%Signature\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots Date\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots
+	\item Ir. Anthony K. Muchiri \vspace*{.2cm}\\
+	Signature\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots Date\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots
 	%\item Prof. George N. Nyakoe\vspace*{.2cm}\\
 	%Signature\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots Date\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots
 	\item Ms. Maurine Andanje\vspace*{.2cm}\\
