--- a/Main_file.tex
+++ b/Main_file.tex
@@ -51,8 +51,7 @@
 \renewcommand\thefigure{\thesection.\arabic{figure}}
 \renewcommand\thetable{\thesection.\arabic{table}}
 \@addtoreset{equation}{section} \@addtoreset{figure}{section}
-\@addtoreset{table}{section} 
-\makeatother
+\@addtoreset{table}{section} \makeatother
 
 %-----Useful abbreviations----------------------
 \newcommand{\mr}{\mathrm}
@@ -74,7 +73,7 @@
       \vspace*{-4.0cm}
     \begin{figure}[!h]
 \centering
-\includegraphics[width=0.3\linewidth]{Figures/JKUAT_logo}
+\includegraphics[width=0.3\ linewidth]{Figures/JKUAT_logo}
 %\caption{}
 \label{fig:jomologo}
 \end{figure}
