--- a/Files/Chapter1.tex
+++ b/Files/Chapter1.tex
@@ -1,7 +1,6 @@
 \section{Introduction}
 \subsection{Background}
 \subsubsection{Stewart Platform}
-\subparagraph*{Description of Mechanism}
 \paragraph{}A stewart platform is a platform with six degrees of freedom (DOF). The six-degrees-of-motion platform is capable of moving in three linear directions and
 three angular directions singly or in any combination.
 It comprises a triangular/rectangular/circular plane called the platform, of which each of the corners (for triangualar platform in this case) is connected through a three-axis joint to one of three legs.
@@ -30,7 +29,6 @@ Each leg also has controllable means for extending its length. These control mea
 \subparagraph{Application}
 \paragraph{}The six DOF Stewart Platform provides an elegant design for simulating flight conditions which finds applications in the safe training of pilots. The mechanism differs from other simulators in that it has no fixed axes relative to the ground, and therefore within the limits of amplitude of the design it can truly simulate the conditions of banking by carrying the simulation of control surfaces into the axes of the new attitude.
 
-\subsubsection{Force Balance}
 \subsubsection{Wind Tunnel}
 \paragraph{}
 A wind tunnel is a large tube with air moving inside. This movement of air is usually done by powerful fans. The tunnel is used to copy the actions of an object in flight thus allowing
@@ -47,7 +45,11 @@ lift and drag forces could be read. The wind tunnel was powered by a fan driven 
 	\end{figure}
 \end{center}
 \paragraph{}
-Later in the early 20th century in Europe, the main users of wind tunnels were Gustave Eiffel in France and Ludwig Prandtl in Germany. Prandtl built the first closed circuit wind tunnel in 1908. By the 1940’s supersonic wind tunnels were in use. In 1972 a cryogenic wind tunnel was built at NASA Langley by injecting liquid nitrogen into the wind tunnel to cool the gas. This lowered the viscosity and increased the Reynolds number, and this tunnel had the capability to match Reynolds and Mach numbers simultaneously up to Mach 1.2. 
+Later in the early 20th century in Europe, the main users of wind tunnels were Gustave Eiffel in France and Ludwig Prandtl in Germany. Prandtl built the first closed circuit wind tunnel in 1908.
+\paragraph{}Closed circuit wind tunnels are characterized by the recirculation of the airflow with with very minimal exchange with the exterior. Open circuit wind tunnels on the other hand, have an airflow that follows a straight path and flows to the contracted zone where the test section is located and then passes through a diffuser, a fan section
+and an exhaust.
+\cite{fernandes_design_nodate}
+By the 1940’s supersonic wind tunnels were in use. In 1972 a cryogenic wind tunnel was built at NASA Langley by injecting liquid nitrogen into the wind tunnel to cool the gas. This lowered the viscosity and increased the Reynolds number, and this tunnel had the capability to match Reynolds and Mach numbers simultaneously up to Mach 1.2. 
 \paragraph{}Today the largest wind tunnel in the world is the National Full-Scale Aerodynamics Complex at NASA's Ames Research Center, which has a test section of cross section 80 ft by 100 ft (24 m x 31 m). The types of instruments in common use in wind tunnels include boundary layer rakes, tufts, pitot tubes, pressure sensitive paint, smoke, and static pressure taps.
 \begin{center}
 \begin{figure}[!h]
@@ -71,6 +73,35 @@ aerodynamic forces on sports balls, partially open valves, and anything else tha
 For wind tunnel testing with scale models to be applicable to the aerodynamics of the full-scale test object, conditions of dynamic similarity must be met.
 \paragraph{}Wind tunnel testing is not cheap i.e. both to buid and to use. While a crude wind tunnel can be constructed relatively cheaply from a large fan and
 sheet metal, our project will be limited to development of the six-degrees-of-freedom Stewart Platform and Force balance. We will use the low speed wind tunnel that is currently available at ?????
+\subsubsection{Force Balances}
+\paragraph{}A force balance is a device used to take direct measurement of forces and torques acting on the model that is being tested in the wind tunnel. The need for
+force balances arises due to the necessity of having maximum load capability in all measuring components along with the accuracy for measuring minimum loads. Force balances can be external or internal. In external force balances the test section lies outside of the wind tunnel test section, whereas in internal force balances the balance is inside the model itself connecting the model to the support structure.
+\cite{fernandes_design_nodate}
+\paragraph{}Several different types of external force balances are available for wind tunnel use
+\cite{morris_force_2010}:
+\begin{enumerate}
+\item Wire
+\item Platform
+\item Yoke
+\item Pyramidal
+\end{enumerate}
+\begin{center}
+	\begin{figure}[!h]
+	\centering
+	\includegraphics{Figures/Fig6}
+	\caption{Typical configurations for external force balances}
+	\end{figure}
+\end{center}
+\paragraph{}The different kinds of internal balances can be made based on:
+1 the type of transducer i.e. strain gauge or piezoelectric balance.
+2 shape i.e. box balance and sting balance
+\begin{center}
+	\begin{figure}[!h]
+	\centering
+	\includegraphics{Figures/Fig7}
+	\caption{Typical configurations for external force balances}
+	\end{figure}
+\end{center}
 \subsection{Problem statement}
 (Insert your content)
 \subsection{Objectives}
@@ -79,3 +110,4 @@ sheet metal, our project will be limited to development of the six-degrees-of-fr
 \paragraph{}Additive manufacturing offers the ability to produce intricate products and parts with lower development costs, shorter lead times, less energy consumed during manufacturing as well as less material waste. This method can be used to manufacture delicate components such as the bipolar plates with elimination of the risks involved such as breakage of brittle Graphene material during production.     
 \paragraph{}Precise control of reactant flow and pressure, stack temperature, and membrane humidity will increase the fuel cell’s robustness as well as efficiency.
 \paragraph{}The goal of this research is to develop physic-based dynamic models of fuel cell systems and fuel processor systems and then apply multivariable control techniques to study their behavior. The analysis will give insight into the control design limitations and provide guidelines for the necessary controller structure and system re-design.
+
