--- a/Files/Chapter1.tex
+++ b/Files/Chapter1.tex
@@ -14,7 +14,7 @@ It comprises a triangular/rectangular/circular plane called the platform, of whi
 	\end{figure}
 \end{center}
 \paragraph{}Each leg is connected to the ground by a two-axis joint where: One of these axes is
-normal to the leg and is provided with a means for control wheareas, the other axis is normal to the first and is not provided with a means for control.
+normal to the leg and is provided with a means for control whereas, the other axis is normal to the first and is not provided with a means for control.
 Each leg also has controllable means for extending its length. These control means include:
 \begin{enumerate}
 \item Use of two hydraulic jacks
@@ -103,7 +103,11 @@ force balances arises due to the necessity of having maximum load capability in 
 	\end{figure}
 \end{center}
 \subsection{Problem statement}
-(Insert your content)
+\paragraph{}Simulation and analysis of scaled models is an important step in the development of aircrafts, vehicles and other machines . Such analysis provides aerodynamic peformance data that can be used to inform any modifications or improvements e.g. in aircrafts and vehicles to make them more efficient and safer. One such method that is used to perform aerodynamic performance evaluation is the wind tunnel, which can be low speed or high speed, used in conjuction with sensors for data aquisition by a computer. External or internal six-component force balances are also used. Another such technology that can be used for this purpose is the Stewart platform, which can be used to predict behaviour of vehicles and aircrafts in the actual environment.
+
+\paragraph{}Whereas the wind tunnel gives very accurate results, it is expensive to build and use. Also, some objects require complex maneuver simulations to imitate the actual movements in air. There is therefore the need for dynamic positioning of objects in the wind tunnel.
+
+\paragraph{}This project proposal, therefore, presents the development of a 3-component external force moment-balance to stand as a simple and economical alternative to the existing commercial solutions. The force balance should be able to measure lift, drag and pitching moment in small models and will be used with a generic low speed wind tunnel which is already available. The proposal also presents the design of a six-degrees-of-freedom Stewart platform to simulate the different movemnets of objects.
 \subsection{Objectives}
 \cite{stewart_platform_1965}
 \subsection{Justification of the study}
@@ -111,3 +115,14 @@ force balances arises due to the necessity of having maximum load capability in 
 \paragraph{}Precise control of reactant flow and pressure, stack temperature, and membrane humidity will increase the fuel cell’s robustness as well as efficiency.
 \paragraph{}The goal of this research is to develop physic-based dynamic models of fuel cell systems and fuel processor systems and then apply multivariable control techniques to study their behavior. The analysis will give insight into the control design limitations and provide guidelines for the necessary controller structure and system re-design.
 
+\subsection{Objectives}
+\subsubsection{Main Objective}
+\begin{enumerate}
+\item To develop an external Stewart platform force balance for a low speed wind tunnel 
+\end{enumerate}
+\subsubsection{Specific Objectives}
+\begin{enumerate}
+\item To design and fabricate a six-degrees-of-freedom Stewart platform
+\item To develop a force balance for the Stewart platform
+\item To obtain forces and moments from a test model
+\end{enumerate}
