--- a/Main_file.tex
+++ b/Main_file.tex
@@ -83,8 +83,9 @@
    \large{Department of Mechatronic Engineering}\\
 
     ------------------------------------------------------------------------------------------------\\[1.0cm]
-    \LARGE{\textbf{Development of a Hydrogen Fuel Cell Control System}}\\[0.6cm]
-    \LARGE{\textbf{Final year project (FYP 13-11)
+    \LARGE{\textbf{Development of a 6 DOF Stewart platform
+        Force Balance for a Low Speed Wind Tunnel}}\\[0.6cm]
+    \LARGE{\textbf{Final year proposal (FYP 18-10)
             }}\\[1.5cm]
     %\large{by}\\[0.6cm
 
@@ -127,7 +128,7 @@
 \input{Files/Abstract}
 \clearpage
 \pagenumbering{arabic}
-  \input{Files/Introduction}
+  \input{Files/Chapter1}
   \clearpage
   \input{Files/Chapter2}
   \clearpage
