--- a/Files/Introduction.tex
+++ b/Files/Introduction.tex
@@ -1,72 +1,130 @@
 \section{Introduction}
 \label{sec:introduction}
 \subsection{Background}
-\paragraph{}Research on Fuel cells started in 1801 when British Chemist Humphry Davy was setting up experiments to assist him in separating several materials using voltaic piles. The experiments set the background for the development of fuel cells which Christian Friedrich Schönbein worked on in 1838. Sir William Grove was the first scientist to prove that reaction between hydrogen and oxygen produced electricity in 1939. He carried out experiments on water electrolysers and fuel cells using his background on electrolysis to come up with a reverse process to generate electricity. He succeeded in building a device that combined water and hydrogen to generate electricity. The new device was originally called a gas battery, but later was renamed the fuel cell.
-\paragraph{}The first operational fuel cell was developed by Charles Langer and Ludwig Mond. The duo developed a functional fuel cell, obtaining fuel capacity of 0.73V at 20A/m2. Francis Bacon advanced the Mond and Langer fuel cell in 1958, which was later used in the Apollo mission in 1969. Since then, the space agencies have been using fuel cells to power the space crafts and provide water for the astronauts.
-\begin{figure}
-\includegraphics{Figures/Figure3}
-\caption{Fuel Cell Structure
-\cite{pukrushpan_modeling_2003}}
-\end{figure}
-
-\paragraph{}With the current global challenge in the energy sector, there is an increasing need for power generation with minimal pollution and environmental degradation. As a way of mitigating environmental pollution and providing energy shortage routes, Fuel Cell technologies have been considered as elements of alternative energy systems. These technologies capitalize on high efficiencies (between 50–65 percent, Supramaniam, et al., 1999 \cite{ashby_fuel_nodate}) and low emissions.
-\paragraph{}Fuel cells are increasingly becoming a promising alternative to internal combustion engines (ICEs) and thus are considered for transportation (automotive, marine and aerospace) applications. They are also being considered for distributed power generation for residential homes and industries. Another promising use of FC stacks is for electricity storage in conjunction with electrolyzers and hydrogen accumulators.\cite{stefanopoulou_mechatronics_nodate}
-\paragraph{}Power generation from Fuel Cells (FC) necessitates the integration of chemical, fluid,
-mechanical, thermal, electrical, and electronic subsystems. This integration presents many
-challenges and opportunities in the mechatronics engineering field. A fuel cell system is made up of a water and heat management system, an air system, a humidifier system and a hydrogen in-out let system. For optimum operation of the Fuel cell, some factors must be controlled - these are: the hydrogen flow, air supply, water cooling temperature, membrane temperature and humidity. Control strategies are therefore imminent so that the FC operates within some established limits such as electric power, pressure of the fuel gas and amount of air for the anode chemical reaction.
-\paragraph{}There are several types of fuel cells, each using a different chemistry. The common types of fuel cells are:
-\begin{itemize}
-\item Polymer electrolyte fuel cells
-\item Direct methanol fuel cells
-\item Alkaline fuel cells
-\item Phosphoric acid fuel cells
-\item Solid oxide fuel cells
-\item Reversible fuel cells
-\item Molten carbonate fuel cells
-\end{itemize}
-\paragraph{}Polymer electrolyte fuel cells and alkaline fuel cells were the commonly used fuel cells for space missions. Development of fuel cells for commercial activities started in 2007, with an interest to develop fuel cells for automobile applications. The Polymer Electrolyte membrane (PEM) fuel cell is commonly used to power vehicles. Currently, the Polymer Electrolyte Membrane (PEM) Fuel Cells (also known as Proton Exchange Membrane Fuel Cells) are considered by many to be in a relatively more developed stage for ground vehicle applications. PEM Fuel Cells have high power density, solid electrolyte, long cell and stack life, as well as low corrosion. They have greater eﬃciency when compared to heat engines and their use in modular electricity generation and propulsion of electric vehicles is promising \cite{holze_supramanian_2007}. This proposal will focus on the design and development of a control system for a Proton Exchange Membrane Fuel Cell (PEMFC).
-
-\subsection{Basic Operation Principle of a Hydrogen  Fuel Cell}
-\begin{figure}[!h]
-\includegraphics{Figures/Figure1}
-\caption{Fuel cell types and their respective operating temperatures
-\cite{stefanopoulou_mechatronics_nodate}}
-\end{figure}
-\begin{figure}[!h]
-\includegraphics{Figures/Figure2}
-\caption{Fuel Cell Reactions
-\cite{pukrushpan_modeling_2003}}
-\end{figure}
-\paragraph{}Fuel cells convert chemical energy sources directly to electricity. A fuel cell consists of an electrolyte sandwiched between two electrodes. The electrolyte has a special property which allows protons to pass through while blocking electrons. Hydrogen gas passes over one electrode, i.e. an anode, and with the help of a catalyst, separates into electrons and hydrogen protons.
-\begin{equation}
-$$2H_{2}\rightarrow 4H^{+} + 4e^{-}$$
-\end{equation}
-\paragraph{}The protons ﬂow to the other cathode through the electrolyte while the electrons ﬂow through an external circuit, thus creating electricity. The hydrogen protons and electrons combine with oxygen ﬂow through the cathode, and produce water.
-\begin{equation}
-$$O_{2}+ 4H_{2} + 4e^{-} \rightarrow 2H_{2}O $$
-\end{equation}
-\paragraph{}The overall reaction of the fuel cell is given by:
-\begin{equation}
-$$2H_{2}+ O_{2} \rightarrow 2H_{2}O $$
-\end{equation}
-
-\subsection{Problem statement}
-\paragraph{}As a measure to curb pollution due to the industrialization and transportation sectors, world governments are turning to alternative sources of energy. These alternative sources of energy should drastically reduce the pollution rates by cutting down emissions. Fuel cell technology is one such example of alternative sources of energy. A fuel cell uses the chemical energy of hydrogen or other fuels to cleanly and efficiently produce electricity. Moreover, fuel cells can operate at higher efficiencies than combustion engines and can convert the chemical energy in the fuel directly to electrical energy with efficiencies capable of exceeding 60\%. Fuel cells have lower or zero emissions compared to combustion engines.
-\paragraph{}The various departments of energy, however,  have to work closely with national laboratories, universities, and industry partners to overcome critical technical barriers to fuel cell development. These barriers are cost, performance, and durability which are still key challenges in the fuel cell industry. 
-\paragraph{}This design proposal seeks to provide a solution to improving the fuel cell’s performance by improving the robustness and efficiency of the Fuel Cell stack system for real world conditions through precise control of reactant flow and pressure, stack temperature, and membrane humidity\cite{stefanopoulou_mechatronics_nodate}.
-\subsection{Objectives}
-\subsubsection{Main Objectives}
+\subsubsection{Stewart Platform}
+\paragraph{}A stewart platform is a platform with six degrees of freedom (DOF). The six-degrees-of-motion platform is capable of moving in three linear directions and
+three angular directions singly or in any combination.
+It comprises a triangular/rectangular/circular plane called the platform, of which each of the corners (for triangualar platform in this case) is connected through a three-axis joint to one of three legs.
+This is shown in Fig.1.1.
+\begin{center}
+	\begin{figure}[!h]
+	\centering
+	\includegraphics{Figures/Fig1}
+	\caption{General arrangement}
+	\end{figure}
+\end{center}
+\paragraph{}Each leg is connected to the ground by a two-axis joint where: One of these axes is
+normal to the leg and is provided with a means for control whereas, the other axis is normal to the first and is not provided with a means for control.
+Each leg also has controllable means for extending its length. These control means include:
 \begin{enumerate}
-\item To develop a Hydrogen Fuel cell control system.
+\item Use of two hydraulic jacks
+\item Screw Jacks
+\item Rotary actuator
+\item Levers
+\item Linear co-ordinate control
+\item Strength
+\end{enumerate}
+\paragraph{}These shall be discussed in detail at a later stage.
+\subparagraph{Application}
+\paragraph{}The six DOF Stewart Platform provides an elegant design for simulating flight conditions which finds applications in the safe training of pilots. The mechanism differs from other simulators in that it has no fixed axes relative to the ground, and therefore within the limits of amplitude of the design it can truly simulate the conditions of banking by carrying the simulation of control surfaces into the axes of the new attitude.
+\subsubsection{Wind Tunnel}
+\paragraph{}
+A wind tunnel is a large tube with air moving inside. This movement of air is usually done by powerful fans. The tunnel is used to copy the actions of an object in flight thus allowing
+to obtain the components that better define this interaction, forces and moments.
+\paragraph{} The first wind tunnel was built by
+Francis Wenham in 1871. However, it was the Wright Brothers who were the first to show the value of the wind tunnel in aerodynamic design with their 1902 wind tunnel.  The Wright Brothers’ wind tunnel was largely made of wood, with a glass window on the top to look down through and see the force balance, from which the
+lift and drag forces could be read. The wind tunnel was powered by a fan driven off a natural gas fueled engine. Their tunnel was square of 16" by 16"(about 407mm by 407mm), and 6 foot long (about 1829mm), with a maximum test speed of 35 mph (about 56 km/h).
+\begin{center}
+	\begin{figure}[!h]
+	\centering
+	\includegraphics{Figures/Fig2}
+	\caption{Diagram of a typical wind tunnel}
+	\end{figure}
+\end{center}
+\paragraph{}
+Later in the early 20th century in Europe, the main users of wind tunnels were Gustave Eiffel in France and Ludwig Prandtl in Germany. Prandtl built the first closed circuit wind tunnel in 1908.
+\paragraph{}Closed circuit wind tunnels are characterized by the recirculation of the airflow with with very minimal exchange with the exterior. Open circuit wind tunnels on the other hand, have an airflow that follows a straight path and flows to the contracted zone where the test section is located and then passes through a diffuser, a fan section
+and an exhaust.
+\cite{fernandes_design_nodate}
+By the 1940’s supersonic wind tunnels were in use. In 1972 a cryogenic wind tunnel was built at NASA Langley by injecting liquid nitrogen into the wind tunnel to cool the gas. This lowered the viscosity and increased the Reynolds number, and this tunnel had the capability to match Reynolds and Mach numbers simultaneously up to Mach 1.2. 
+\paragraph{}Today the largest wind tunnel in the world is the National Full-Scale Aerodynamics Complex at NASA's Ames Research Center, which has a test section of cross section 80 ft by 100 ft (24 m x 31 m). The types of instruments in common use in wind tunnels include boundary layer rakes, tufts, pitot tubes, pressure sensitive paint, smoke, and static pressure taps.
+\begin{center}
+\begin{figure}[!h]
+	\centering
+	\includegraphics{Figures/Fig3}
+	\caption{NASA wind tunnels used to test new airplane designs}
+\end{figure}
+\end{center}By the 1940’s supersonic wind tunnels were in use. In 1972 a cryogenic wind tunnel was built at NASA Langley by injecting liquid nitrogen into the wind tunnel to cool the gas. This lowered the viscosity and increased the Reynolds number, and this tunnel had the capability to match Reynolds and Mach numbers simultaneously up to Mach 1.2. 
+\paragraph{}Today the largest wind tunnel in the world is the National Full-Scale Aerodynamics Complex at NASA's Ames Research Center, which has a test section of cross section 80 ft by 100 ft (24 m x 31 m). The types of instruments in common use in wind tunnels include boundary layer rakes, tufts, pitot tubes, pressure sensitive paint, smoke, and static pressure taps.
+\begin{center}
+\begin{figure}[!h]
+	\centering
+	\includegraphics{Figures/Fig3}
+	\caption{NASA wind tunnels used to test new airplane designs}
+\end{figure}
+\end{center}
+\paragraph{}NASA uses wind tunnels to test scale models of aircraft and spacecraft. Wind tunnels help NASA to test ideas of making airplanes better and safer. They are also used to help engineers in designing spacecraft that will work in other planets such as mars - the wind tunnel can be used to simulate objects in an atmosphere that's thinner than ours i.e. an atmosphere that's exactly like the Martian atmosphere. NASA has wind tunnels of different types and sizes. Some are low-speed wind tunnels, others are hypersonic i.e. they are made to carry out tests at 4,000 mph (6437 kph).
+\begin{center}
+     %&\vspace*{-4.0cm}
+    \begin{figure}[!h]
+\centering
+\includegraphics{Figures/Fig4}
+\caption{NASA wind tunnels used to test the design of heavy-lift rocket}
+\end{figure}
+\end{center}
+\paragraph{}Wind tunnels are used to measure the aerodynamic forces on airplanes, wings, cars, trucks, bridges, and buildings, they can also be used to measure the
+aerodynamic forces on sports balls, partially open valves, and anything else that can be mounted on the mounting sting. Wind tunnels are an effective tool used by engineers in determining the various aerodynamic loads due to movement of these vessels during the development process.
+For wind tunnel testing with scale models to be applicable to the aerodynamics of the full-scale test object, conditions of dynamic similarity must be met.
+\paragraph{}Wind tunnel testing is not cheap i.e. both to buid and to use. While a crude wind tunnel can be constructed relatively cheaply from a large fan and
+sheet metal, our project will be limited to development of the six-degrees-of-freedom Stewart Platform and Force balance. We will use the low speed wind tunnel that is currently available at the fluids laboratory.
+\subsubsection{Force Balances}
+\paragraph{}A force balance is a device used to take direct measurement of forces and torques acting on the model that is being tested in the wind tunnel. The need for
+force balances arises due to the necessity of having maximum load capability in all measuring components along with the accuracy for measuring minimum loads. Force balances can be external or internal. In external force balances the test section lies outside of the wind tunnel test section, whereas in internal force balances the balance is inside the model itself connecting the model to the support structure.
+\cite{fernandes_design_nodate}
+\paragraph{}Several different types of external force balances are available for wind tunnel use
+\cite{morris_force_2010}:
+\begin{enumerate}
+\item Wire
+\item Platform
+\item Yoke
+\item Pyramidal
+\end{enumerate}
+\begin{center}
+	\begin{figure}[!h]
+	\centering
+	\includegraphics{Figures/Fig6}
+	\caption{Typical configurations for external force balances}
+	\end{figure}
+\end{center}
+\paragraph{}The different kinds of internal balances can be made based on:
+1 the type of transducer i.e. strain gauge or piezoelectric balance.
+2 shape i.e. box balance and sting balance
+\begin{center}
+	\begin{figure}[!h]
+	\centering
+	\includegraphics{Figures/Fig7}
+	\caption{Typical configurations for external force balances}
+	\end{figure}
+\end{center}
+\subsection{Problem statement}
+\paragraph{}Simulation and analysis of scaled models is an important step in the development of aircrafts, vehicles and other machines . Such analysis provides aerodynamic peformance data that can be used to inform any modifications or improvements e.g. in aircrafts and vehicles to make them more efficient and safer. One such method that is used to perform aerodynamic performance evaluation is the wind tunnel, which can be low speed or high speed, used in conjuction with sensors for data aquisition by a computer. External or internal six-component force balances are also used. Another such technology that can be used for this purpose is the Stewart platform, which can be used to predict behaviour of vehicles and aircrafts in the actual environment.
+\paragraph{}Whereas the wind tunnel gives very accurate results, it is expensive to build and use. Also, some objects require complex maneuver simulations to imitate the actual movements in air. There is therefore the need for dynamic positioning of objects in the wind tunnel.
+
+\paragraph{}This project proposal, therefore, presents the development of a 3-component external force moment-balance to stand as a simple and economical alternative to the existing commercial solutions. The force balance should be able to measure lift, drag and pitching moment in small models and will be used with a generic low speed wind tunnel which is already available. The proposal also presents the design of a six-degrees-of-freedom Stewart platform to simulate the different movemnets of objects.
+\subsection{Objectives}
+\subsection{Justification of the study}
+\paragraph{}Additive manufacturing offers the ability to produce intricate products and parts with lower development costs, shorter lead times, less energy consumed during manufacturing as well as less material waste. This method can be used to manufacture delicate components such as the bipolar plates with elimination of the risks involved such as breakage of brittle Graphene material during production.     
+\paragraph{}Precise control of reactant flow and pressure, stack temperature, and membrane humidity will increase the fuel cell’s robustness as well as efficiency.
+\paragraph{}The goal of this research is to develop physic-based dynamic models of fuel cell systems and fuel processor systems and then apply multivariable control techniques to study their behavior. The analysis will give insight into the control design limitations and provide guidelines for the necessary controller structure and system re-design.
+
+\subsection{Objectives}
+\subsubsection{Main Objective}
+\begin{enumerate}
+\item To develop an external Stewart platform force balance for a low speed wind tunnel 
 \end{enumerate}
 \subsubsection{Specific Objectives}
 \begin{enumerate}
-\item To design and additively manufacture a PEMFC prototype which can be adapted for domestic use and scaled for industrial applications.
-\item To design and fabricate supporting control electronics for the Hydrogen Fuel Cell.
-\item To achieve precise control of reactant flow and pressure, stack temperature, and membrane humidity.
-\item To simulate and test alternative control strategies for the Hydrogen fuel cell. 
+\item To design and fabricate a six-degrees-of-freedom Stewart platform
+\item To develop a force balance for the Stewart platform
+\item To obtain forces and moments from a test model
 \end{enumerate}
-\subsection{Justification of the study}
-\paragraph{}Additive manufacturing offers the ability to produce intricate products and parts with lower development costs, shorter lead times, less energy consumed during manufacturing as well as less material waste. This method can be used to manufacture delicate components such as the bipolar plates with elimination of the risks involved such as breakage of brittle graphene material during production.     
-\paragraph{}Precise control of reactant flow and pressure, stack temperature, and membrane humidity will increase the fuel cell’s robustness as well as efficiency \cite{stefanopoulou_mechatronics_nodate}\cite{gonzatti_proposal_2017}\cite{thanapalan_model_nodate}.
-\paragraph{}The goal of this research is to develop physic-based dynamic models of fuel cell systems and fuel processor systems and then apply multivariable control techniques to study their behavior. The analysis will give insight into the control design limitations and provide guidelines for the necessary controller structure and system re-design.
