--- a/Main_file.tex
+++ b/Main_file.tex
@@ -9,6 +9,7 @@
 %\usepackage{Styles/pst-node}
 \usepackage{Styles/fancyheadings}
 \usepackage{tocloft}
+\usepackage[euler]{textgreek}
 %-----Tex width---------------------------------
 \textwidth 16cm
 
