--- a/Files/Chapter2.tex
+++ b/Files/Chapter2.tex
@@ -35,7 +35,7 @@ platform in terms of torque are calculated by the controller and the outputs of 
 \cite{kang1996robust}.
 \item Robust tracking control design in the presence of time varying
 uncertainties 
-\cite{kim2000robust}.
+\cite{kim1998high}.
 \item Tracking errors drive to zero asymptotically with help of sliding mode
 controller design 
 \cite{huang2004sliding}.
