--- a/Bib/References.bib
+++ b/Bib/References.bib
@@ -165,3 +165,52 @@
   year={1965},
   publisher={SAGE Publications Sage UK: London, England}
 }
+
+@inproceedings{kang1996robust,
+  title={Robust tracking control of Stewart platform},
+  author={Kang, Ji-Yoon and Kim, Dong Hwan and Lee, Kyo-Il},
+  booktitle={Proceedings of 35th IEEE Conference on Decision and Control},
+  volume={3},
+  pages={3014--3019},
+  year={1996},
+  organization={IEEE}
+}
+
+@inproceedings{kang1996robust,
+  title={Robust tracking control of Stewart platform},
+  author={Kang, Ji-Yoon and Kim, Dong Hwan and Lee, Kyo-Il},
+  booktitle={Proceedings of 35th IEEE Conference on Decision and Control},
+  volume={3},
+  pages={3014--3019},
+  year={1996},
+  organization={IEEE}
+}
+
+@inproceedings{kim1998high,
+  title={High speed tracking control of Stewart platform manipulator via enhanced sliding mode control},
+  author={Kim, Nag-In and Lee, Chong-Won},
+  booktitle={Proceedings. 1998 IEEE International Conference on Robotics and Automation (Cat. No. 98CH36146)},
+  volume={3},
+  pages={2716--2721},
+  year={1998},
+  organization={IEEE}
+}
+
+@inproceedings{huang2004sliding,
+  title={Sliding-mode tracking control of the Stewart platform},
+  author={Huang, Chin-I and Chang, Chih-Fu and Yu, Ming-Yi and Fu, Li-Chen},
+  booktitle={2004 5th Asian Control Conference (IEEE Cat. No. 04EX904)},
+  volume={1},
+  pages={562--569},
+  year={2004},
+  organization={IEEE}
+}
+
+@inproceedings{iqbal2006direct,
+  title={Direct Sliding-Mode Controller Design for a 6DOF Stewart Manipulator},
+  author={Iqbal, S and Bhatti, AI},
+  booktitle={2006 IEEE International Multitopic Conference},
+  pages={421--426},
+  year={2006},
+  organization={IEEE}
+}
