--- a/Bib/References.bib
+++ b/Bib/References.bib
@@ -214,3 +214,21 @@
   year={2006},
   organization={IEEE}
 }
+
+@inproceedings{post2010force,
+  title={Force balance design for educational wind tunnels},
+  author={Post, Scott and Morris, Martin},
+  booktitle={ASEE Annual Conference \& Exposition},
+  pages={15--594},
+  year={2010},
+  organization={American Society for Engineering Education}
+}
+
+
+@article{fernandes_design_nodate,
+	title = {Design of a Wind Tunnel Force Balance},
+	pages = {122},
+	author = {Fernandes, João Tiago Pinheiro},
+	langid = {english},
+	file = {Fernandes - Design of a Wind Tunnel Force Balance.pdf:C\:\\Users\\earls\\Zotero\\storage\\CJJW7ELG\\Fernandes - Design of a Wind Tunnel Force Balance.pdf:application/pdf},
+}
