--- a/Files/Introduction.tex
+++ b/Files/Introduction.tex
@@ -2,8 +2,8 @@
 \label{sec:introduction}
 \subsection{Background}
 \subsubsection{Stewart Platform}
-\paragraph{}A Stewart platform is a platform with six degrees of freedom (DOF).
-\cite{stewart1965platform} It comprises a triangular/rectangular/circular plane called the platform, of which each of the attachments to the platform is connected through a three-axis joint to one of three legs.
+\paragraph{}A Stewart platform is a platform with six degrees of freedom (DOF)
+\cite{stewart1965platform}. It comprises a triangular/rectangular/circular plane called the platform, of which each of the attachments to the platform is connected through a three-axis joint to one of three legs.
 A Stewart platform is shown in Fig.1.1.
 \begin{center}
 	\begin{figure}[!h]
