modify expected outcomes

--- a/Files/Chapter4.tex
+++ b/Files/Chapter4.tex
@@ -1,9 +1,10 @@
 \section{Expected Outcomes}
 \begin{enumerate}
-\item A functional hydrogen stack will be developed and tested
-\item The controller for the hydrogen fuel cell will be developed and tested from a selection of controllers that were modelled and simulated.
-\item The controller supporting circuitry will be developed with a custom printed circuit board.
-\item Hydrogen fuel cell system performance will be optimized using the controller.
+\item A fuctional stewart platform with six degrees of freedom postioning of a model within a wind tunnel.
+\item A functional force sensor for measuring the aerodynamic load applied on a model.
+\item Obtain the aerodynamic coefficients from a test model as measured using the stewart platform load balance.
+\item Working electronic circuits used to obtain sensor measurements and relay the readings.
+\item A program used to obtain data, apply inputs to the stewart platform and process the data gathered.
 \end{enumerate}
 \newpage
 \section{Proposed Budget}
