--- a/Files/Introduction.tex
+++ b/Files/Introduction.tex
@@ -2,8 +2,7 @@
 \label{sec:introduction}
 \subsection{Background}
 \subsubsection{Stewart Platform}
-\paragraph{}A Stewart platform is a platform with six degrees of freedom (DOF)
-\cite{stewart1965platform}. It comprises a triangular/rectangular/circular plane called the platform, of which each of the attachments to the platform is connected through a three-axis joint to one of three legs.
+\paragraph{}A Stewart platform is a platform with six degrees of freedom (DOF). It comprises a triangular/rectangular/circular plane called the platform, of which each of the attachments to the platform is connected through a three-axis joint to one of three legs.
 A Stewart platform is shown in Fig.1.1.
 \begin{center}
 	\begin{figure}[!h]
@@ -23,15 +22,14 @@ A Stewart platform is shown in Fig.1.1.
 %\end{enumerate}
 %\paragraph{}These shall be discussed in detail at a later stage.
 \subparagraph{Application}
-\paragraph{}The six DOF Stewart Platform provides an elegant design for simulating flight conditions that can be used in safe training of pilots
-\cite{stewart1965platform}.
+\paragraph{}The six DOF Stewart Platform provides an elegant design for simulating flight conditions that can be used in safe training of pilots. 
 \subsubsection{Wind Tunnel}
 \paragraph{}
 A wind tunnel is a large tube with air moving inside. This movement of air is usually done by powerful fans. The tunnel is used to copy the actions of an object in flight thus allowing
-to obtain the components that better define this interaction, forces and moments \cite{morris_force_2010}.
+to obtain the components that better define this interaction, forces and moments.
 \paragraph{} The first wind tunnel was built by
 Francis Wenham in 1871. However, it was the Wright Brothers who were the first to show the value of the wind tunnel in aerodynamic design with their 1902 wind tunnel.  The Wright Brothers’ wind tunnel was largely made of wood, with a glass window on the top to look down through and see the force balance, from which the
-lift and drag forces could be read. The wind tunnel was powered by a fan driven off a natural gas fueled engine. Their tunnel was square of 16" by 16"(about 407mm by 407mm), and 6 foot long (about 1829mm), with a maximum test speed of 35 mph (about 56 km/h) \cite{fernandes_design_nodate}.
+lift and drag forces could be read. The wind tunnel was powered by a fan driven off a natural gas fueled engine. Their tunnel was square of 16" by 16"(about 407mm by 407mm), and 6 foot long (about 1829mm), with a maximum test speed of 35 mph (about 56 km/h).
 %\begin{center}
 	\begin{figure}[!h]
 	%\centering
