--- a/Files/Chapter2.tex
+++ b/Files/Chapter2.tex
@@ -5,7 +5,9 @@
 manipulator that provides six-degree-of-freedom (6DOF) i.e. roll, pitch, yaw, surge, sway and heave, and can be controlled in all these freedoms simultaneously. The platform consists six variable-length electro-mechanical actuators connecting a top plate to a base plate with spherical joints.
 \paragraph{}The platform is able to move in three angular directions and in three linear directions, singly or in any combination \cite{stewart1965platform}. Angular and translational motion of the top plate with
 respect to the base plate is acheived by reducing or extending the actuator lengths. For the top plate to follow the desired trajectory with high frequency, there has to be proper coordination of the actuator lengths \cite{iqbal_dynamic_2008}.
-\paragraph{}Each leg of the mechanism is connected to the ground by a two-axis joint where: One of these axes is normal to the leg and is provided with a means for control whereas, the other axis is normal to the first and is not provided with a means for control. Each leg also has controllable means for extending its length. These control means include:
+\paragraph{}Each leg of the mechanism is connected to the ground by a two-axis joint where: One of these axes is
+normal to the leg and is provided with a means for control whereas, the other axis is normal to the first and is not provided with a means for control.
+Each leg also has controllable means for extending its length. These control means include:
 \begin{enumerate}
 \item Use of hydraulic jacks.
 \item Screw jacks - This gives give the advantage of
@@ -23,7 +25,8 @@ the whole system. There will be no bending moments in any of the members apart f
 	\end{figure}
 \end{center}
 \paragraph{}Stewart platforms that use screw jacks driven by electric motors as leg actuators have the advantage of being light and easy to control. Velocity and position control for these platforms can be done using shaft encoders and tachometers. A ball screw is used to minimize friction in a screw drive and backlash in the ball screw can be eliminated by use of double nuts preloaded with spring washers \cite{fichter1986stewart}.
-\paragraph{}In order to control the platform in the required direction, a program involving linear or angular accelerations or a combination of both is necessary so that signals can be given to the various legs in accordance with the input requirements. The six inputs to the Stewart platform in terms of torque are calculated by the controller and the outputs of the Stewart platform are the upper plate's angular and translational positions sensed by highly precise sensors or estimated by the motor's encoders \cite{iqbal_dynamic_2008}.
+\paragraph{}In order to control the platform in the required direction, a program involving linear or angular accelerations or a combination of both is necessary so that signals can be given to the various legs in accordance with the input requirements. The six inputs to the Stewart
+platform in terms of torque are calculated by the controller and the outputs of the Stewart platform are the upper plate's angular and translational positions sensed by highly precise sensors or estimated by the motor's encoders \cite{iqbal_dynamic_2008}.
 \paragraph{}Further, as concerns the control aspect, in recent years many researchers have worked on robust controllers for the Stewart platform. Some of these works include:
 \begin{enumerate}
 \item A Lyapunov based approach for designing robust PD controller was proposed in presence of uncertainties 
@@ -76,8 +79,7 @@ torques separately and without coupling,provided that the balance is well assemb
 	\caption{Typical configurations for internal force balances. \textit{Left to right:} Box balance and sting balance.}
 	\end{figure}
 \end{center}
-\paragraph{}The box balance presents a cubic shape and can either be made of a solid piece of material or from assembled parts. In this configuation, the loads are transferred from the top to the bottom. The sting balance presents a cylindrical shape and the loads are transferred from one end to the other in the longitudinal direction. It can be used to measure forces or torques 
-\cite{morris_force_2010}}.
+\paragraph{}The box balance presents a cubic shape and can either be made of a solid piece of material or from assembled parts. In this configuation, the loads are transferred from the top to the bottom. The sting balance presents a cylindrical shape and the loads are transferred from one end to the other in the longitudinal direction. It can be used to measure forces or torques.
 \paragraph{}The advantage of internal force balances is that they minimize the interference caused by the supporting bars in the flow.
 \subsection{Sensors}
 \subsubsection{Load Sensors}
@@ -87,8 +89,7 @@ torques separately and without coupling,provided that the balance is well assemb
 \item Electric measurement techniques.
 \end{enumerate}
 \paragraph{}Electric measurement techniques are preferred for Force balance applications. One such electric measurement device is the strain gauge. A strain gauge is an electromechanical device whose electrical resistance changes linearly with the strain in the component.
-\paragraph{}Metal foil strain gauges are widely used. This type of strain gauge provide more precise strain values than wire strain gauges. However, since the relative changes on electric resistance of the strain gauge are so small, it is necessary to develop an effective method to measure them because each strain gauge would require extremely accurate signal measurements. The solution is to have a set of strain gauges coupled in order to minimize the required accuracy, forming a force transducer i.e. the \textit{Wheatstone bridge}
-\cite{fernandes_design_nodate}.
+\paragraph{}Metal foil strain gauges are widely used. This type of strain gauge provide more precise strain values than wire strain gauges. However, since the relative changes on electric resistance of the strain gauge are so small, it is necessary to develop an effective method to measure them because each strain gauge would require extremely accurate signal measurements. The solution is to have a set of strain gauges coupled in order to minimize the required accuracy, forming a force transducer i.e. the \textit{Wheatstone bridge}.
 	\begin{figure}[!h]
 	\includegraphics{Figures/Fig9}
 	\caption{Wheatstone Bridge Circuit}
